Players Information Data Frame

--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -40,17 +40,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 113,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/manuelamunoz/opt/anaconda3/envs/PythonData2/lib/python3.6/site-packages/ipykernel_launcher.py:6: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  \n"
+     ]
+    }
+   ],
    "source": [
-    "# Calculate the len of \"SN\"\n",
-    "players_count = len(purchase_data[\"SN\"].value_counts())\n"
+    "# Create a data frame with the personal information of each player\n",
+    "\n",
+    "players_infodf = purchase_data[['SN', 'Age', 'Gender']]\n",
+    "\n",
+    "# Drop duplicates\n",
+    "players_infodf.drop_duplicates(subset=\"SN\", keep = 'first', inplace = True)\n",
+    "\n",
+    "# Update the SN header to User Name\n",
+    "players_infodf = players_infodf.rename(columns = {\"SN\": \"User Name\"})\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate the len of \"SN\"\n",
+    "players_count = players_infodf[\"User Name\"].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +122,7 @@
        "0            576"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,26 +154,6 @@
     "\n",
     "\n",
     "* Display the summary data frame\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Purchase ID', 'SN', 'Age', 'Gender', 'Item ID', 'Item Name', 'Price'], dtype='object')"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "purchase_data.columns"
    ]
   },
   {
@@ -317,6 +328,27 @@
     }
    ],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "484"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mtotal_players = purchase_data.loc[purchase_data[\"Gender\"] == \"Male\"]\n",
+    "len(mtotal_players[\"SN\"].unique())"
+   ]
   },
   {
    "cell_type": "markdown",
