Count and Percentage of players

--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -75,7 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calculate the len of \"SN\"\n",
+    "# Count the number of players\n",
     "players_count = players_infodf[\"User Name\"].count()"
    ]
   },
@@ -331,31 +331,214 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>User Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Lisim78</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Lisovynya38</td>\n",
+       "      <td>40</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Ithergue48</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Chamassasya86</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Iskosia90</td>\n",
+       "      <td>23</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Yalae81</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Itheria73</td>\n",
+       "      <td>36</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Iskjaskst81</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Undjask33</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Chanosian48</td>\n",
+       "      <td>35</td>\n",
+       "      <td>Other / Non-Disclosed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Inguron55</td>\n",
+       "      <td>23</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Haisrisuir60</td>\n",
+       "      <td>23</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Saelaephos52</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Assjaskan73</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Saesrideu94</td>\n",
+       "      <td>35</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Lisassa64</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Female</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Lisirra25</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Zontibe81</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Reunasu60</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Female</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Chamalo71</td>\n",
+       "      <td>30</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "484"
+       "        User Name  Age                 Gender\n",
+       "0         Lisim78   20                   Male\n",
+       "1     Lisovynya38   40                   Male\n",
+       "2      Ithergue48   24                   Male\n",
+       "3   Chamassasya86   24                   Male\n",
+       "4       Iskosia90   23                   Male\n",
+       "5         Yalae81   22                   Male\n",
+       "6       Itheria73   36                   Male\n",
+       "7     Iskjaskst81   20                   Male\n",
+       "8       Undjask33   22                   Male\n",
+       "9     Chanosian48   35  Other / Non-Disclosed\n",
+       "10      Inguron55   23                   Male\n",
+       "11   Haisrisuir60   23                   Male\n",
+       "12   Saelaephos52   21                   Male\n",
+       "13    Assjaskan73   22                   Male\n",
+       "14    Saesrideu94   35                   Male\n",
+       "15      Lisassa64   21                 Female\n",
+       "16      Lisirra25   20                   Male\n",
+       "17      Zontibe81   21                   Male\n",
+       "18      Reunasu60   22                 Female\n",
+       "19      Chamalo71   30                   Male"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mtotal_players = purchase_data.loc[purchase_data[\"Gender\"] == \"Male\"]\n",
-    "len(mtotal_players[\"SN\"].unique())"
+    "players_infodf.head(20)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 178,
    "metadata": {},
+   "outputs": [],
    "source": [
+    "# Percentage and Count of Male Players\n",
+    "male_players = players_infodf.loc[players_infodf[\"Gender\"] == \"Male\", \"Gender\"]\n",
+    "male_percentage = male_players.count() / total_players * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Percentage and Count of Female Players\n",
     "\n",
-    "## Purchasing Analysis (Gender)"
+    "female_players = players_infodf.loc[players_infodf[\"Gender\"] == \"Female\", \"Gender\"]\n",
+    "female_percentage = female_players.count() / total_players * 100"
    ]
   },
   {
