--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -267,7 +267,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 236,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Percentage and Count of Male Players\n",
+    "male_players = len(players_infodf.loc[players_infodf[\"Gender\"] == \"Male\", \"Gender\"])\n",
+    "male_percentage = round((male_players / players_count * 100), 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 238,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Percentage and Count of Female Players\n",
+    "female_players = len(players_infodf.loc[players_infodf[\"Gender\"] == \"Female\", \"Gender\"])\n",
+    "female_percentage = round((female_players / players_count * 100), 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 246,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Percentage and Count of Other / Non-Disclosed\n",
+    "other_players = len(players_infodf.loc[players_infodf[\"Gender\"] == \"Other / Non-Disclosed\"])\n",
+    "other_percentage = round((other_players / players_count * 100), 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 257,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating a summary data frame to hold the results\n",
+    "gender_demografics = pd.DataFrame({\"Total Count\": [male_players, female_players, other_players],\n",
+    "                                  \"Percentage of Players\": [male_percentage, female_percentage, other_percentage]})\n",
+    "# Set new indexes\n",
+    "gender_demografics = gender_demografics.set_index([pd.Index([\"Male\", \"Female\", \"Other / Non-Disclosed\"])])\n",
+    "\n",
+    "# Change the format\n",
+    "gender_demografics[\"Percentage of Players\"] = gender_demografics[\"Percentage of Players\"].map(\"{}%\".format)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
@@ -322,248 +371,14 @@
        "Other / Non-Disclosed           11                 1.91%"
       ]
      },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 157,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>User Name</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Gender</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Lisim78</td>\n",
-       "      <td>20</td>\n",
-       "      <td>Male</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Lisovynya38</td>\n",
-       "      <td>40</td>\n",
-       "      <td>Male</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Ithergue48</td>\n",
-       "      <td>24</td>\n",
-       "      <td>Male</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Chamassasya86</td>\n",
-       "      <td>24</td>\n",
-       "      <td>Male</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Iskosia90</td>\n",
-       "      <td>23</td>\n",
-       "      <td>Male</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Yalae81</td>\n",
-       "      <td>22</td>\n",
-       "      <td>Male</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Itheria73</td>\n",
-       "      <td>36</td>\n",
-       "      <td>Male</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Iskjaskst81</td>\n",
-       "      <td>20</td>\n",
-       "      <td>Male</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Undjask33</td>\n",
-       "      <td>22</td>\n",
-       "      <td>Male</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Chanosian48</td>\n",
-       "      <td>35</td>\n",
-       "      <td>Other / Non-Disclosed</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Inguron55</td>\n",
-       "      <td>23</td>\n",
-       "      <td>Male</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Haisrisuir60</td>\n",
-       "      <td>23</td>\n",
-       "      <td>Male</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Saelaephos52</td>\n",
-       "      <td>21</td>\n",
-       "      <td>Male</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Assjaskan73</td>\n",
-       "      <td>22</td>\n",
-       "      <td>Male</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Saesrideu94</td>\n",
-       "      <td>35</td>\n",
-       "      <td>Male</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>Lisassa64</td>\n",
-       "      <td>21</td>\n",
-       "      <td>Female</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>Lisirra25</td>\n",
-       "      <td>20</td>\n",
-       "      <td>Male</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>Zontibe81</td>\n",
-       "      <td>21</td>\n",
-       "      <td>Male</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>Reunasu60</td>\n",
-       "      <td>22</td>\n",
-       "      <td>Female</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>Chamalo71</td>\n",
-       "      <td>30</td>\n",
-       "      <td>Male</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        User Name  Age                 Gender\n",
-       "0         Lisim78   20                   Male\n",
-       "1     Lisovynya38   40                   Male\n",
-       "2      Ithergue48   24                   Male\n",
-       "3   Chamassasya86   24                   Male\n",
-       "4       Iskosia90   23                   Male\n",
-       "5         Yalae81   22                   Male\n",
-       "6       Itheria73   36                   Male\n",
-       "7     Iskjaskst81   20                   Male\n",
-       "8       Undjask33   22                   Male\n",
-       "9     Chanosian48   35  Other / Non-Disclosed\n",
-       "10      Inguron55   23                   Male\n",
-       "11   Haisrisuir60   23                   Male\n",
-       "12   Saelaephos52   21                   Male\n",
-       "13    Assjaskan73   22                   Male\n",
-       "14    Saesrideu94   35                   Male\n",
-       "15      Lisassa64   21                 Female\n",
-       "16      Lisirra25   20                   Male\n",
-       "17      Zontibe81   21                   Male\n",
-       "18      Reunasu60   22                 Female\n",
-       "19      Chamalo71   30                   Male"
-      ]
-     },
-     "execution_count": 157,
+     "execution_count": 258,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "players_infodf.head(20)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 178,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Percentage and Count of Male Players\n",
-    "male_players = players_infodf.loc[players_infodf[\"Gender\"] == \"Male\", \"Gender\"]\n",
-    "male_percentage = male_players.count() / total_players * 100"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 177,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Percentage and Count of Female Players\n",
-    "\n",
-    "female_players = players_infodf.loc[players_infodf[\"Gender\"] == \"Female\", \"Gender\"]\n",
-    "female_percentage = female_players.count() / total_players * 100"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 179,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'DataFrame' object has no attribute 'lo'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-179-c3d5d1e962f9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Percentage and Count of Other / Non-Disclosed\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mother_players\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mplayers_infodf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlo\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mplayers_infodf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Gender\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"Other / Non-Disclosed\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Gender\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mother_percentage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mother_players\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcount\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mtotal_players\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/opt/anaconda3/envs/PythonData2/lib/python3.6/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   5272\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5273\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 5274\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   5275\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5276\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'lo'"
-     ]
-    }
-   ],
-   "source": [
-    "#Percentage and Count of Other / Non-Disclosed\n",
-    "\n",
-    "other_players = players_infodf.loc[players_infodf[\"Gender\"] == \"Other / Non-Disclosed\", \"Gender\"]\n",
-    "other_percentage = other_players.count() / total_players * 100"
+    "# Display the summary data frame\n",
+    "gender_demografics"
    ]
   },
   {
