Averages per gender

--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -617,6 +617,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 273,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Gender\n",
+       "Female                   113\n",
+       "Male                     652\n",
+       "Other / Non-Disclosed     15\n",
+       "Name: Purchase ID, dtype: int64"
+      ]
+     },
+     "execution_count": 273,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Purchase count\n",
+    "\n",
+    "purchase_count = grouped_gender[\"Purchase ID\"].count()\n",
+    "purchase_count"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 270,
    "metadata": {},
    "outputs": [
@@ -636,9 +663,60 @@
     }
    ],
    "source": [
-    "# Price average\n",
-    "price_average = round(grouped_gender[\"Price\"].mean(),2)\n",
-    "price_average"
+    "#  Average\n",
+    "\n",
+    "average_price = round(grouped_gender[\"Price\"].mean(),2)\n",
+    "average_price"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 281,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Gender\n",
+       "Female                    361.94\n",
+       "Male                     1967.64\n",
+       "Other / Non-Disclosed      50.19\n",
+       "Name: Price, dtype: float64"
+      ]
+     },
+     "execution_count": 281,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Total Purchase Value\n",
+    "\n",
+    "total_purchase = grouped_gender[\"Price\"].sum()\n",
+    "total_purchase"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 278,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "793.2566666666663"
+      ]
+     },
+     "execution_count": 278,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Average total purchase per person\n",
+    "\n",
+    "average_purchase = total_purchase.mean()\n",
+    "average_purchase"
    ]
   },
   {
