Purchase Analysis (Gender)

--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -300,23 +300,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Creating a summary data frame to hold the results\n",
     "gender_demografics = pd.DataFrame({\"Total Count\": [male_players, female_players, other_players],\n",
-    "                                  \"Percentage of Players\": [male_percentage, female_percentage, other_percentage]})\n",
+    "                                   \"Percentage of Players\": [male_percentage, female_percentage, other_percentage]})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 322,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a serie with the index values\n",
+    "#gender_lst = pd.Series([\"Male\", \"Female\", \"Other / Non-Disclosed\"])\n",
+    "\n",
     "# Set new indexes\n",
     "gender_demografics = gender_demografics.set_index([pd.Index([\"Male\", \"Female\", \"Other / Non-Disclosed\"])])\n",
-    "\n",
     "# Change the format\n",
     "gender_demografics[\"Percentage of Players\"] = gender_demografics[\"Percentage of Players\"].map(\"{}%\".format)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [
     {
@@ -371,14 +381,14 @@
        "Other / Non-Disclosed           11                 1.91%"
       ]
      },
-     "execution_count": 258,
+     "execution_count": 323,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Display the summary data frame\n",
-    "gender_demografics    bbbvvbbvbbvvvvvv"
+    "gender_demografics"
    ]
   },
   {
@@ -408,7 +418,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 412,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Using Group by in order to separate the data into fields according to \"Gender\" values\n",
+    "grouped_gender = purchase_data.groupby(['Gender'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 413,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Purchase count\n",
+    "purchase_count = grouped_gender[\"Purchase ID\"].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 414,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  Average\n",
+    "average_price = grouped_gender[\"Price\"].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 415,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Total Purchase Value\n",
+    "total_purchase = grouped_gender[\"Price\"].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 416,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We use df player_infodf (df created at the beginning) to group by gender the number of users\n",
+    "grouped_info = players_infodf.groupby([\"Gender\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 422,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Average Total Purchase Per Person\n",
+    "average_person = grouped_gender[\"Price\"].sum() / grouped_info[\"User Name\"].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 423,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating a data frame to store the purchase analysis and formatting \n",
+    "\n",
+    "gender_analysis = pd.DataFrame ({\"Purchase count\": purchase_count,\n",
+    "                                 \"Average Purchase Price\": average_price,\n",
+    "                                 \"Total Purchase Value\": total_purchase,\n",
+    "                                 \"Average Total Purchase Per Person\": average_person})\n",
+    "gender_analysis[\"Average Purchase Price\"] = gender_analysis[\"Average Purchase Price\"].map((\"${:.2f}\").format)\n",
+    "gender_analysis[\"Total Purchase Value\"] = gender_analysis[\"Total Purchase Value\"].map((\"${:.2f}\").format)\n",
+    "gender_analysis[\"Average Total Purchase Per Person\"] = gender_analysis[\"Average Total Purchase Per Person\"].map((\"${:.2f}\").format)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 420,
    "metadata": {},
    "outputs": [
     {
@@ -432,10 +519,10 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Purchase Count</th>\n",
+       "      <th>Purchase count</th>\n",
        "      <th>Average Purchase Price</th>\n",
        "      <th>Total Purchase Value</th>\n",
-       "      <th>Avg Total Purchase per Person</th>\n",
+       "      <th>Average Total Purchase Per Person</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Gender</th>\n",
@@ -457,7 +544,7 @@
        "      <th>Male</th>\n",
        "      <td>652</td>\n",
        "      <td>$3.02</td>\n",
-       "      <td>$1,967.64</td>\n",
+       "      <td>$1967.64</td>\n",
        "      <td>$4.07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -472,251 +559,27 @@
        "</div>"
       ],
       "text/plain": [
-       "                      Purchase Count Average Purchase Price  \\\n",
-       "Gender                                                        \n",
-       "Female                           113                  $3.20   \n",
-       "Male                             652                  $3.02   \n",
-       "Other / Non-Disclosed             15                  $3.35   \n",
+       "                       Purchase count Average Purchase Price  \\\n",
+       "Gender                                                         \n",
+       "Female                            113                  $3.20   \n",
+       "Male                              652                  $3.02   \n",
+       "Other / Non-Disclosed              15                  $3.35   \n",
        "\n",
-       "                      Total Purchase Value Avg Total Purchase per Person  \n",
-       "Gender                                                                    \n",
-       "Female                             $361.94                         $4.47  \n",
-       "Male                             $1,967.64                         $4.07  \n",
-       "Other / Non-Disclosed               $50.19                         $4.56  "
+       "                      Total Purchase Value Average Total Purchase Per Person  \n",
+       "Gender                                                                        \n",
+       "Female                             $361.94                             $4.47  \n",
+       "Male                              $1967.64                             $4.07  \n",
+       "Other / Non-Disclosed               $50.19                             $4.56  "
       ]
      },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 271,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Purchase ID', 'SN', 'Age', 'Gender', 'Item ID', 'Item Name', 'Price'], dtype='object')"
-      ]
-     },
-     "execution_count": 271,
+     "execution_count": 420,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "purchase_data.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 266,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Using Group by in order to separate the data into fields according to \"Gender\" values\n",
-    "\n",
-    "grouped_gender = purchase_data.groupby(['Gender'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 267,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Purchase ID</th>\n",
-       "      <th>SN</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Item ID</th>\n",
-       "      <th>Item Name</th>\n",
-       "      <th>Price</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Gender</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Female</th>\n",
-       "      <td>113</td>\n",
-       "      <td>113</td>\n",
-       "      <td>113</td>\n",
-       "      <td>113</td>\n",
-       "      <td>113</td>\n",
-       "      <td>113</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Male</th>\n",
-       "      <td>652</td>\n",
-       "      <td>652</td>\n",
-       "      <td>652</td>\n",
-       "      <td>652</td>\n",
-       "      <td>652</td>\n",
-       "      <td>652</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Other / Non-Disclosed</th>\n",
-       "      <td>15</td>\n",
-       "      <td>15</td>\n",
-       "      <td>15</td>\n",
-       "      <td>15</td>\n",
-       "      <td>15</td>\n",
-       "      <td>15</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                       Purchase ID   SN  Age  Item ID  Item Name  Price\n",
-       "Gender                                                                 \n",
-       "Female                         113  113  113      113        113    113\n",
-       "Male                           652  652  652      652        652    652\n",
-       "Other / Non-Disclosed           15   15   15       15         15     15"
-      ]
-     },
-     "execution_count": 267,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "grouped_gender.count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 273,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Gender\n",
-       "Female                   113\n",
-       "Male                     652\n",
-       "Other / Non-Disclosed     15\n",
-       "Name: Purchase ID, dtype: int64"
-      ]
-     },
-     "execution_count": 273,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Purchase count\n",
-    "\n",
-    "purchase_count = grouped_gender[\"Purchase ID\"].count()\n",
-    "purchase_count"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 270,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Gender\n",
-       "Female                   3.20\n",
-       "Male                     3.02\n",
-       "Other / Non-Disclosed    3.35\n",
-       "Name: Price, dtype: float64"
-      ]
-     },
-     "execution_count": 270,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#  Average\n",
-    "\n",
-    "average_price = round(grouped_gender[\"Price\"].mean(),2)\n",
-    "average_price"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 281,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Gender\n",
-       "Female                    361.94\n",
-       "Male                     1967.64\n",
-       "Other / Non-Disclosed      50.19\n",
-       "Name: Price, dtype: float64"
-      ]
-     },
-     "execution_count": 281,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Total Purchase Value\n",
-    "\n",
-    "total_purchase = grouped_gender[\"Price\"].sum()\n",
-    "total_purchase"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 278,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "793.2566666666663"
-      ]
-     },
-     "execution_count": 278,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Average total purchase per person\n",
-    "\n",
-    "average_purchase = total_purchase.mean()\n",
-    "average_purchase"
+    "# Display the data frame\n",
+    "gender_analysis"
    ]
   },
   {
@@ -746,6 +609,15 @@
     "\n",
     "\n",
     "* Display Age Demographics Table\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Establish bins for ages\n"
    ]
   },
   {
