--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -613,11 +613,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 424,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Establish bins for ages\n"
+    "# Establish bins for ages\n",
+    "\n",
+    "bins = [0, 10 , 15, 20 , 25, 30, 35, 40, 99]\n",
+    "\n",
+    "# Create the name of the bins\n",
+    "\n",
+    "age_groups = [\"<10\", \"10-14\", \"15-19\", \"20-24\", \"25-29\", \"30-34\", \"35-39\", \"40+\"]"
    ]
   },
   {
