--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 570,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 571,
    "metadata": {
     "scrolled": false
    },
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 572,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 573,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
        "0            576"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 573,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 575,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 576,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 577,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 578,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 549,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,28 +212,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 579,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style  type=\"text/css\" >\n",
-       "</style><table id=\"T_edaa239e_fd3c_11ea_917b_acde48001122\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Number of Unique Items</th>        <th class=\"col_heading level0 col1\" >Average Price</th>        <th class=\"col_heading level0 col2\" >Number of Purchases</th>        <th class=\"col_heading level0 col3\" >Total Revenue</th>    </tr></thead><tbody>\n",
+       "</style><table id=\"T_cef06ecc_ff4b_11ea_b92e_acde48001122\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Number of Unique Items</th>        <th class=\"col_heading level0 col1\" >Average Price</th>        <th class=\"col_heading level0 col2\" >Number of Purchases</th>        <th class=\"col_heading level0 col3\" >Total Revenue</th>    </tr></thead><tbody>\n",
        "                <tr>\n",
-       "                        <th id=\"T_edaa239e_fd3c_11ea_917b_acde48001122level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "                        <td id=\"T_edaa239e_fd3c_11ea_917b_acde48001122row0_col0\" class=\"data row0 col0\" >179</td>\n",
-       "                        <td id=\"T_edaa239e_fd3c_11ea_917b_acde48001122row0_col1\" class=\"data row0 col1\" >$3.05</td>\n",
-       "                        <td id=\"T_edaa239e_fd3c_11ea_917b_acde48001122row0_col2\" class=\"data row0 col2\" >780</td>\n",
-       "                        <td id=\"T_edaa239e_fd3c_11ea_917b_acde48001122row0_col3\" class=\"data row0 col3\" >$2,379.77</td>\n",
+       "                        <th id=\"T_cef06ecc_ff4b_11ea_b92e_acde48001122level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "                        <td id=\"T_cef06ecc_ff4b_11ea_b92e_acde48001122row0_col0\" class=\"data row0 col0\" >179</td>\n",
+       "                        <td id=\"T_cef06ecc_ff4b_11ea_b92e_acde48001122row0_col1\" class=\"data row0 col1\" >$3.05</td>\n",
+       "                        <td id=\"T_cef06ecc_ff4b_11ea_b92e_acde48001122row0_col2\" class=\"data row0 col2\" >780</td>\n",
+       "                        <td id=\"T_cef06ecc_ff4b_11ea_b92e_acde48001122row0_col3\" class=\"data row0 col3\" >$2,379.77</td>\n",
        "            </tr>\n",
        "    </tbody></table>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7fb3039dbb00>"
+       "<pandas.io.formats.style.Styler at 0x7fb303debc88>"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 579,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 581,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 582,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 583,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 584,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 585,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 586,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +381,7 @@
        "Other / Non-Disclosed           11                 1.91%"
       ]
      },
-     "execution_count": 323,
+     "execution_count": 586,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 412,
+   "execution_count": 588,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 413,
+   "execution_count": 589,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 414,
+   "execution_count": 590,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 415,
+   "execution_count": 591,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 416,
+   "execution_count": 592,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 422,
+   "execution_count": 593,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 423,
+   "execution_count": 594,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,8 +495,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 420,
-   "metadata": {},
+   "execution_count": 595,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -572,7 +574,7 @@
        "Other / Non-Disclosed               $50.19                             $4.56  "
       ]
      },
-     "execution_count": 420,
+     "execution_count": 595,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,17 +615,264 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 424,
+   "execution_count": 598,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Establish bins for ages\n",
     "\n",
-    "bins = [0, 10 , 15, 20 , 25, 30, 35, 40, 99]\n",
+    "bins = [0, 9.90 , 14.90, 19.90 , 24.90, 29.90, 34.90, 39.90, 99999]\n",
     "\n",
     "# Create the name of the bins\n",
     "\n",
     "age_groups = [\"<10\", \"10-14\", \"15-19\", \"20-24\", \"25-29\", \"30-34\", \"35-39\", \"40+\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 629,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating a copy of the original data to work with\n",
+    "info_copy = players_infodf.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 630,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "User Name    object\n",
+       "Age           int64\n",
+       "Gender       object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 630,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "info_copy.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 631,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>User Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Lisim78</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Lisovynya38</td>\n",
+       "      <td>40</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Ithergue48</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Chamassasya86</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Iskosia90</td>\n",
+       "      <td>23</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       User Name  Age Gender\n",
+       "0        Lisim78   20   Male\n",
+       "1    Lisovynya38   40   Male\n",
+       "2     Ithergue48   24   Male\n",
+       "3  Chamassasya86   24   Male\n",
+       "4      Iskosia90   23   Male"
+      ]
+     },
+     "execution_count": 631,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "info_copy.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 632,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "info_copy[\"Age Ranges\"] = pd.cut(info_copy[\"Age\"], bins, labels=age_groups)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 633,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grouped_info = info_copy.groupby(['Age Ranges'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 634,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>User Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Age Ranges</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>&lt;10</th>\n",
+       "      <td>17</td>\n",
+       "      <td>17</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10-14</th>\n",
+       "      <td>22</td>\n",
+       "      <td>22</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15-19</th>\n",
+       "      <td>107</td>\n",
+       "      <td>107</td>\n",
+       "      <td>107</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20-24</th>\n",
+       "      <td>258</td>\n",
+       "      <td>258</td>\n",
+       "      <td>258</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25-29</th>\n",
+       "      <td>77</td>\n",
+       "      <td>77</td>\n",
+       "      <td>77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30-34</th>\n",
+       "      <td>52</td>\n",
+       "      <td>52</td>\n",
+       "      <td>52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35-39</th>\n",
+       "      <td>31</td>\n",
+       "      <td>31</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40+</th>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            User Name  Age  Gender\n",
+       "Age Ranges                        \n",
+       "<10                17   17      17\n",
+       "10-14              22   22      22\n",
+       "15-19             107  107     107\n",
+       "20-24             258  258     258\n",
+       "25-29              77   77      77\n",
+       "30-34              52   52      52\n",
+       "35-39              31   31      31\n",
+       "40+                12   12      12"
+      ]
+     },
+     "execution_count": 634,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grouped_info.count()"
    ]
   },
   {
@@ -718,6 +967,13 @@
      "output_type": "execute_result"
     }
    ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
